<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.fishandwhistle.ctexplorer.MainActivity" >

    <item
        android:id="@+id/action_maptype"
        android:icon="@drawable/ic_action_topo_on"
        android:showAsAction="always"
        android:title="@string/action_maptype_menu">
        <menu>
            <item
                android:id="@+id/action_maptype_map"
                android:icon="@drawable/ic_maptype_map"
                android:title="@string/action_maptype_map"/>
            <item
                android:id="@+id/action_maptype_satellite"
                android:icon="@drawable/ic_maptype_satellite"
                android:title="@string/action_maptype_satellite"/>
            <item
                android:id="@+id/action_maptype_hybrid"
                android:icon="@drawable/ic_maptype_hybrid"
                android:title="@string/action_maptype_hybrid"/>
            <item
                android:id="@+id/action_maptype_terrain"
                android:icon="@drawable/ic_maptype_terrain"
                android:title="@string/action_maptype_terrain"/>
            <item
                android:id="@+id/action_maptype_none"
                android:icon="@drawable/ic_maptype_none"
                android:title="@string/action_maptype_none"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_maplayers"
        android:icon="@drawable/ic_action_layers"
        android:showAsAction="always"
        android:title="@string/action_layers">
        <menu>
            <item
                android:id="@+id/action_grid"
                android:icon="@drawable/ic_action_grid_on"
                android:title="@string/action_grid_on"/>
            <item
                android:id="@+id/action_topo"
                android:icon="@drawable/ic_action_topo_on"
                android:title="@string/action_topo_options"/>
            <item
                android:id="@+id/action_trackview"
                android:icon="@drawable/ic_action_tracking_on"
                android:title="@string/action_trackview"/>
            <item
                android:id="@+id/action_waypoints"
                android:icon="@drawable/ic_action_waypoints"
                android:title="@string/action_waypoints_off" />
        </menu>
    </item>
    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/ic_action_location_on"
        android:showAsAction="always"
        android:title="@string/action_gps">
        <menu>
            <item
                android:id="@+id/action_mylocation"
                android:icon="@drawable/ic_action_location_on"
                android:title="@string/action_mylocation_on"/>
            <item
                android:id="@+id/action_mark_my_location"
                android:icon="@drawable/ic_action_mark_my_location"
                android:title="@string/action_mark_my_location"/>
            <item
                android:id="@+id/action_tracking"
                android:icon="@drawable/ic_action_tracking_on"
                android:title="@string/action_tracking_on"/>
            <item
                android:id="@+id/action_location_manager"
                android:icon="@drawable/ic_action_locmanager"
                android:title="@string/action_location_manager"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_measure"
        android:icon="@drawable/ic_action_measure_distance"
        android:showAsAction="always"
        android:title="@string/action_measure">
        <menu>
            <item
                android:id="@+id/action_measure_distance"
                android:icon="@drawable/ic_action_measure_distance"
                android:title="@string/action_measure_distance"/>
            <item
                android:id="@+id/action_measure_area"
                android:icon="@drawable/ic_action_measure_area"
                android:title="@string/action_measure_area"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>